--- a/Compressions/Compressions/Compressions.csproj
+++ b/Compressions/Compressions/Compressions.csproj
@@ -47,8 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="char_freq.cs" />
+    <Compile Include="Compress_Arithmetic.cs" />
+    <Compile Include="Compress_BWT_RLE.cs" />
     <Compile Include="Compress_Huffman.cs" />
-    <Compile Include="Compress_RLE.cs" />
+    <Compile Include="Compress_binary_RLE.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
